# SmartSolver

./: .gitignore  LICENSE  README.md  __init__.py  linear_algebra.py  math_step_tracker.py  multivariable.py  pyproject.toml
.github/workflows/: publish.yml
tests/: test_smartsolver.py
