[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartsolver"
version = "0.1.0"
description = "Step-by-step mathematics solver built on SymPy — equations, calculus, and annotated rules."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ed-Master", email = "support@ed-master.co.za" },
]
keywords = [
    "sympy",
    "math",
    "step-by-step",
    "calculus",
    "algebra",
    "education",
    "solver",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education",
]
dependencies = [
    "sympy>=1.13",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]

[project.urls]
Homepage = "https://www.ed-master.co.za"
Repository = "https://github.com/mngadilinda/SmartSolver"
Documentation = "https://github.com/mngadilinda/SmartSolver#readme"

[tool.hatch.build.targets.wheel]
# Repo root is the package source; install as the `smartsolver` import path.
force-include = { "__init__.py" = "smartsolver/__init__.py", "math_step_tracker.py" = "smartsolver/math_step_tracker.py" }

[tool.hatch.build.targets.sdist]
include = [
    "/__init__.py",
    "/math_step_tracker.py",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
